# emotion-recognition-model

./: MAKEFILE  README.md  dataloader.py  implementation_approach.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: affectnet.ipynb
preprocessing/: image_processing.py  metadata_extraction.py
