[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "emotion"
version = "0.0.1"
description = "This repository provides tools for processing and working with the AffectNet dataset, the largest publicly available dataset for facial expression, valence, and arousal estimation."
authors = [
  { name = "Ivan Ivani" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["emotion"]
force_sort_within_sections = true


